fix wrong color main nav color for arts and education section

--- a/app/styles/includes/_variables.scss
+++ b/app/styles/includes/_variables.scss
@@ -116,7 +116,7 @@ $color-sets: (
         #CFE3EA,
         #F0F0F0
     ), (
-        #779E8A,
+        #7A929D,
         #72A7C2
     )),
     ('economy_and_jobs', (
